[package]
name = "clonk-control"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
reqwest = { version = "0.12.9", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
env_logger = "0.11.5"
directories = "5.0.1"
